--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Thitima Profile</h1>
+    <p>I am a Student at King MongKut's University of Technology North Bangkok.</p>
 </body>
 </html>
