--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Thitima Profile</h1>
     <p>I am a Student at King MongKut's University of Technology North Bangkok.</p>
+    <footer>Contact : thitima.dengmee@gmail.com</footer>
 </body>
 </html>
