Update index.html with add Tel

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 <body>
     <h1>Thitima Profile</h1>
     <p>I am a Student at King MongKut's University of Technology North Bangkok.</p>
-    <footer>Contact : thitima.dengmee@gmail.com</footer>
+    <footer>
+        Contact : thitima.dengmee@gmail.com<br> 
+        Tel. 0925470192
+    </footer>
 </body>
 </html>
