--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-    <h1>Thitima Profile</h1>
+    <h1>Thitima Profile eiei</h1>
     <p>I am a Student at King MongKut's University of Technology North Bangkok.</p>
     <footer>
         Contact : thitima.dengmee@gmail.com<br> 
-        Tel. 0925470192
+        Tel. 0925475555
     </footer>
 </body>
 </html>
