--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-    <h1>Thitima Profile</h1>
+    <h1>Thitima Dengmee Profile</h1>
     <p>I am a Student at King MongKut's University of Technology North Bangkok.</p>
     <footer>
         Contact : thitima.dengmee@gmail.com<br> 
